# btc_descriptor

./: .gitignore  CHANGELOG.md  CHANGES.md  CMakeLists.txt
example/: btc_extractor.cpp  btc_recognizer.cpp  place_recognition.cpp
include/: btc.h
launch/: btc_extractor.launch  btc_recognizer.launch  place_recognition.launch
script/: pcd_publisher.py  rename_pcd_files.sh
scripts/: btc_size_comparison.docx  compare_sizes.py  merge_datasets.sh  merge_pose_files.sh  plot_results.py  pointcloud2_to_pcd.py  renumber_pose_file.py
src/: btc.cpp
